Name:                breakout
Version:             0.1
Synopsis:            reactive banana example
Description:         A (very) simple breakout clone.
Homepage:            http://www.github.com/bernstein/breakout
License:             BSD3
License-file:        LICENSE
Author:              Andreas-C. Bernstein
Maintainer:          andreas.bernstein@gmail.com
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.6
Extra-source-files:  README.md
Tested-with:         GHC == 7.4.1
Source-repository head
  type:     git
  location: git://github.com/bernstein/breakout.git

executable breakout
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       GLutils, 
                       UnitBox, 
                       GlutAdapter, 
                       ReactiveUtils,
                       Rendering
  Build-depends:       base >= 4.2 && < 4.6,
                       mtl >= 2.0 && < 2.2,
                       diagrams-core >= 0.5 && < 0.6,
                       diagrams-lib >= 0.5 && < 0.6,
                       active >= 0.1 && < 0.2,
                       vector-space >= 0.7.7 && < 0.9,
                       reactive-banana >= 0.6 && < 0.7,
                       semigroups >= 0.3.4 && < 0.9,
                       OpenGLRaw >= 1.2 && < 1.3,
                       time >= 1.2 && < 1.5,
                       GLUT >= 2.1 && < 2.4

